# aariv-health-ai-backend

./: .gitignore  FolderStruchture.md  README.md
diabetes_service/: .gitignore  Dockerfile  Research.ipynb  app.py  pyproject.toml  requirements.txt
diabetes_service/utils/: preprocess.py
