[project]
name = "diabetes-servie"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad10Raza",email = "rjaahmad60@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "huggingface-hub (>=0.36.0,<0.37.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "utils (>=1.0.2,<2.0.0)",
    "python-utils (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
